--- a/package.json
+++ b/package.json
@@ -1,38 +1,40 @@
 {
-  "name": "hangman",
-  "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "a11y-react-emoji": "^1.1.1",
-    "bootstrap": "^4.3.1",
-    "react": "^16.10.2",
-    "react-bootstrap": "^1.0.0-beta.14",
-    "react-dom": "^16.10.2",
-    "react-scripts": "3.2.0"
-  },
-  "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
-  },
-  "eslintConfig": {
-    "extends": "react-app"
-  },
-  "browserslist": {
-    "production": [
-      ">0.2%",
-      "not dead",
-      "not op_mini all"
-    ],
-    "development": [
-      "last 1 chrome version",
-      "last 1 firefox version",
-      "last 1 safari version"
-    ]
-  },
-  "devDependencies": {
-    "eslint-config-prettier": "^6.3.0",
-    "eslint-plugin-prettier": "^3.1.1"
-  }
+	"name": "hangman",
+	"version": "0.1.0",
+	"private": true,
+	"dependencies": {
+		"a11y-react-emoji": "^1.1.1",
+		"bootstrap": "^4.3.1",
+		"concurrently": "^4.1.2",
+		"express": "^4.17.1",
+		"react": "^16.10.2",
+		"react-bootstrap": "^1.0.0-beta.14",
+		"react-dom": "^16.10.2",
+		"react-scripts": "3.2.0"
+	},
+	"scripts": {
+		"start": "concurrently 'react-scripts start' 'node ./server'",
+		"build": "react-scripts build",
+		"test": "react-scripts test",
+		"eject": "react-scripts eject"
+	},
+	"eslintConfig": {
+		"extends": "react-app"
+	},
+	"browserslist": {
+		"production": [
+			">0.2%",
+			"not dead",
+			"not op_mini all"
+		],
+		"development": [
+			"last 1 chrome version",
+			"last 1 firefox version",
+			"last 1 safari version"
+		]
+	},
+	"devDependencies": {
+		"eslint-config-prettier": "^6.3.0",
+		"eslint-plugin-prettier": "^3.1.1"
+	}
 }
