--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
 		"react": "^16.10.2",
 		"react-bootstrap": "^1.0.0-beta.14",
 		"react-dom": "^16.10.2",
-		"react-scripts": "3.2.0"
+		"react-scripts": "3.2.0",
+		"uifx": "^2.0.3"
 	},
 	"scripts": {
 		"start": "concurrently 'react-scripts start' 'node ./server'",
